# innovation-momentum

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
configs/: openalex_agentic_precursor_terms.json  openalex_ai_ml_terms.json
reports/: index.html
src/: analyze_agentic_and_visuals.py  analyze_topic_dynamics.py  fetch_agentic_precursor_counts.py  fetch_openalex_ai_topics.py  fetch_openalex_counts.py  openalex.py  paths.py  spectral.py
tests/: test_spectral.py
